# gubernamental-agent

./: .env.example  .gitignore  LANGGRAPH_FASTAPI_STRUCTURE.md  Makefile  agente-gubernamental-spec.md  dev_server.py  development-standards.md  pyproject.toml  requirements.txt  run_server.py
apps/web/: package-lock.json  package.json  pnpm-lock.yaml
apps/web/app/: app.css  routes.ts
apps/web/app/lib/: api-client.ts  auth.ts  markdown.tsx
apps/web/app/routes/: callback.tsx  dashboard.tsx  home.tsx  login.tsx  signup.tsx
services/agent/: .env.example  .gitignore  API_README.md  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENTS.md  README.md  config.py  dependencies.py  dev_server.py  main.py  requirements.txt  run_server.py
services/agent/agents/nodes/: conversation.py  memory.py  title_manager.py
services/agent/agents/prompts/: chat_prompts.py
services/agent/agents/tools/: __init__.py  conversation_state_tool.py  document_validation_tool.py  identifier_validation_tool.py  requirement_explanation_tool.py  title_updater.py  tramite_checklist_tool.py
services/agent/agents/workflows/: chat_agent.py
services/agent/api/routes/: chat.py  dipomex.py  health.py  tramites.py
services/agent/api/schemas/: requests.py  responses.py
services/agent/data/: database.py  models.py  repositories.py
services/agent/domain_types/: __init__.py  data_types.py  tramite_types.py  validation_types.py
services/agent/src/api/: main.py  types.py
services/agent/src/config/: __init__.py  settings.py
services/agent/src/core/: __init__.py  agent.py  state.py
services/agent/src/llm/: __init__.py  instruction_parser.py
services/agent/src/monitoring/: logger.py
services/agent/src/types/: action_types.py
services/agent/src/utils/: retry.py  validation.py
services/agent/src/workflow/: __init__.py  graph.py  nodes.py
services/agent/utils/: helpers.py  logging.py
services/agent_adk/: .env.example  .env.template  .gitignore  ADK_SESSION_STATE_GUIDE.md  MULTIAGENT_SYSTEM_GUIDE.md  Makefile  README.md  SEMOVI_LICENSE_SYSTEM_ARCHITECTURE.md  main.py  pyproject.toml  requirements.txt  test_email_pdf.py  test_rag_agent.py  utils.py
services/agent_adk/.adk/: initial_state.json
services/agent_adk/deployment/: local.py  remote.py
services/agent_adk/government_service_agent/: __init__.py  agent.py  config.py  session_config.json
services/agent_adk/government_service_agent/sub_agents/appointment_scheduling_agent/: __init__.py  agent.py
services/agent_adk/government_service_agent/sub_agents/document_extraction_agent/: __init__.py  agent.py
services/agent_adk/government_service_agent/sub_agents/rag_agent/: agent.py
services/agent_adk/government_service_agent/sub_agents/web_search_agent/: agent.py
services/agent_adk/profile_agent/: __init__.py  agent.py
services/agent_adk/rag_agent/: README.md  __init__.py  agent.py  config.py  integration_example.py  setup_corpus.py
services/agent_adk/rag_agent/tools/: __init__.py  add_data.py  create_corpus.py  delete_corpus.py  delete_document.py  get_corpus_info.py  rag_query.py  utils.py
services/agent_adk/semovi_multiagent_system/: __init__.py  agent.py  test_user_example.md
services/agent_adk/semovi_multiagent_system/core/: __init__.py  callbacks.py
services/agent_adk/semovi_multiagent_system/sub_agents/: __init__.py
services/agent_adk/semovi_multiagent_system/sub_agents/appointment_booking_agent/: __init__.py  agent.py
services/agent_adk/semovi_multiagent_system/sub_agents/ine_extraction_agent/: __init__.py  agent.py
services/agent_adk/semovi_multiagent_system/sub_agents/license_consultation_agent/: __init__.py  agent.py
services/agent_adk/semovi_multiagent_system/sub_agents/office_location_agent/: __init__.py  agent.py
services/agent_adk/semovi_multiagent_system/sub_agents/semovi_information_agent/: __init__.py  agent.py
services/agent_adk/semovi_multiagent_system/tools/: __init__.py  appointment_booking_tools.py  authentication_tools.py  ine_extraction_tools.py  license_consultation_tools.py  office_location_tools.py  rag_consultation_tools.py  supabase_connection.py
services/agent_adk/test_agent/: agent.py  auth_tools.py  config.py  tools.py
services/agent_adk/tests/: README.md  __init__.py  conftest.py  run_tests.py  semovi_evaluation.test.json  test_config.json  test_semovi_agent.py
src/: __init__.py
src/api/: main.py
src/api/middleware/: __init__.py  auth.py  errors.py  logging.py  tracking.py
src/api/routes/: __init__.py  health.py  sessions.py  workflows.py
src/config/: environment.py
src/executor/: __init__.py  playwright_executor.py
src/executor/actions/: __init__.py  navigation.py
src/llm/: action_planner.py
src/llm/providers/: __init__.py  openai_provider.py
src/monitoring/: __init__.py  screenshot_manager.py  session_recorder.py
src/types/: __init__.py  llm_types.py  response_types.py  state_types.py
src/utils/: __init__.py  format.py
src/workflow/: conditions.py  graph.py
tramites/: rfc-inscripcion-persona-fisica.md
(+16 files in other folders)
